[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynto"
version = "2.4.2"
description = "Data analysis using a concatenative paradigm"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Peter Graf", email = "peter@pynto.tech"}
]
keywords = ["data analysis", "quantitative", "tabular", "concatenative", "functional"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "python-dateutil",
    "bottleneck",
    "redis",
    "hiredis",
]

[project.urls]
Homepage = "https://github.com/punkbrwstr/pynto"
Repository = "https://github.com/punkbrwstr/pynto"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pynto*"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true

